# GCS_MMS_demo

./: .gitignore  report_v4.tex  requirements.txt
acd2d/: CMakeLists.txt  Dependencies  Makefile  acd2d.py
acd2d/cli/: acd2d_main_cli.cpp
acd2d/gui/: acd2d_draw.h  acd2d_main_gui.cpp
acd2d/src/: acd2d_cut.h  acd2d_data.cpp  acd2d_data.h  acd2d_dir.h
acd2d/test_env/: bird.poly-acd0.000-hybrid1.poly  hole1.poly-acd0.000-hybrid1.poly  simple1.poly-acd0.000-hybrid1.poly  test-1.poly  test-2.poly  test-3.poly  test-5.poly-acd0.000-hybrid1.poly
demo/: README.md  acd2d_input_1775820982.poly  acd2d_input_1776170250.poly  acd2d_input_1776170400.poly  acd2d_input_1776170711.poly  acd2d_input_1776171025.poly  acd2d_input_1776171427.poly  acd2d_input_1776171699.poly  acd2d_input_1776171735.poly  acd2d_input_1776172308.poly  acd2d_input_1776172706.poly  acd2d_input_1776173018.poly  acd2d_input_1776173203.poly  acd2d_input_1776173471.poly  acd2d_input_1776265554.poly  acd2d_input_1776266072.poly  acd2d_input_1776266239.poly  acd2d_input_1776266383.poly  acd2d_input_1776266648.poly  acd2d_input_1776267090.poly  acd2d_input_1776267341.poly  acd2d_input_1776267644.poly  acd2d_input_1776267801.poly  acd2d_input_1776268351.poly  acd2d_input_1776268857.poly  app_config.py  build_and_solve_integrated_miocp_explanation.md  config.yaml  convex_regions.py  dynamics.py  environment.py  experiments.py  graph_builder.py  main_demo.py  maze_benchmark.py  optimizer.py  problem_data.py  scenario_builder.py  shooting.py  visualization.py
demo/models/: maze.py
